Fix background on mobile.

--- a/web/style.css
+++ b/web/style.css
@@ -2,6 +2,7 @@ body{
 	height:100%;
 	background-image: url("bg.jpg");
 	background-color: #000000;
+	background-size:cover;
 	color: #ffffff;
 	margin: 0px;
 }
